examples/ingress/bad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broken-ingress

spec:
  rules:
    - http
        paths:
           path: /
            backend:
              service:
                name backend-service
